PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/DataStructureSubVariableExists.pf
module DataStructureSubVariableExists {

    data Car {
        name String
        ps Int
    }

    test Car = ("Auto",70)

    fun testSomething() : Int {
        i Int = test.ps
         
        return 1
    }
}