PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/DataStructureSubVariableExists.pf
module DataStructureSubVariableExists {

    data Car {
        name String
    }

    test : Car = ("Auto")

    fun testSomething() : Int {
        i Int = test.ps
         
        return 1
    }
}